--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "google-auth-library": "^7.14.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.2.2",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.17.0",
     "uuid": "^8.3.2"
   }
 }
